# rag_book_bot

./: .gitignore  README.md  app.py  chatbot.py  main.py  pyproject.toml  requirements.txt
data/: IPL_Winners_List (1).txt  Quantum_Computing.docx  interview_q_and_ans.txt
