[project]
name = "book-chatbot"
version = "0.1.0"
description = "RAG chatbot"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "streamlit",
    "langchain",
    "langchain-community",
    "langchain-groq",
    "langchain-huggingface",
    "langchain-text-splitters",
    "langchain-classic",
    "faiss-cpu",
    "sentence-transformers",
    "transformers",
    "torch",
    "torchvision",
    "pypdf",
    "docx2txt",
    "python-dotenv",
    "groq"
]